@@ -1,3 +1,9 @@
+2010-01-11  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* util/misc.c (canonicalize_file_name): New function.
+	(make_system_path_relative_to_its_root): Use canonicalize_file_name()
+	instead of realpath().
+
 2010-01-11  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-install.in (usage): Clarify meaning of --root-directory,
